--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         text-align: center;
       }
       .disclaimer {
-        color:red;
+        color: red;
       }
       .sources a {
         color: white;
@@ -146,33 +146,33 @@
       <div class="typing column-span"><span /></div>
       <div class="column-span intro">
         Are you inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> but live in Sydney, Australia?
-        <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available in Australia. Suggestions/additions/comments very welcome.<br /><br />
-        
+        <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available in Australia.
+        Suggestions/additions/comments very welcome.<br /><br />
+
         <span class="disclaimer">Disclaimer: Some of these are referral links.</span>
       </div>
       <div class="flex-column">
         <div class="column-title">🍎 Green Giant</div>
         <ul>
-          <li>
-            <a target="_blank" href="https://amzn.to/3K6yzkP"><span>Chorella Powder(Spermidine)</span></a>
-          </li>
-          <li><a target="_blank" href="https://amzn.to/46VHAal">Amino Acid Complex</a></li>
-          <li><a target="_blank" href="https://amzn.to/3Dl9oHN">Creatine</a></li>
-          <li><a target="_blank" href="https://amzn.to/3rJZTis">Collagen Peptides</a></li>
-          <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols</a></li>
-          <li><a target="_blank" href="https://amzn.to/3NTurWs">Ceylon Cinnamon</a></li>
+          <li>20 oz of Water</li>
+          <li><a target="_blank" href="https://amzn.to/3K6yzkP">Chlorella Powder (Spermidine) 2 Tbsp yielding 13.5mg spermidine</a></li>
+          <li><a target="_blank" href="https://amzn.to/46VHAal">Amino Acid Complex 7.6 g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Dl9oHN">Creatine 2.5 g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3rJZTis">Collagen Peptides 20 g</a></li>
+          <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols 500 mg</a></li>
+          <li><a target="_blank" href="https://amzn.to/3NTurWs">Ceylon Cinnamon 1 tsp</a></li>
         </ul>
       </div>
       <div class="flex-column">
         <div class="column-title">🍎 Super Veggie</div>
         <ul>
           <li><a target="_blank" href="https://amzn.to/3rB9ybb">Black lentils, 300 grams (weighed cooked)</a></li>
-          <li>Broccoli (head+stalk), 250 grams</li>
-          <li>Cauliflower, 150 grams</li>
-          <li>Shiitake or Maitake Mushrooms, 50 grams</li>
-          <li>Garlic, 1 clove (a piece)</li>
-          <li>Ginger Root, 3 grams</li>
-          <li>Lime, 1</li>          
+          <li><span>Broccoli (head+stalk), 250 grams</span></li>
+          <li><span>Cauliflower, 150 grams</span></li>
+          <li><span>Shiitake or Maitake Mushrooms, 50 grams</span></li>
+          <li><span>Garlic, 1 clove (a piece)</span></li>
+          <li><span>Ginger Root, 3 grams</span></li>
+          <li><span>Lime, 1</span></li>
           <li><a target="_blank" href="https://amzn.to/43EswLv">Cumin, 1 Tbsp</a></li>
           <li><a target="_blank" href="https://amzn.to/46XiqrZ">Apple Cider Vinegar, 1 Tbsp</a></li>
           <li><a target="_blank" href="https://amzn.to/46ZO7kk">Hemp Seeds, 1 Tbsp</a></li>
@@ -182,27 +182,23 @@
       <div class="flex-column">
         <div class="column-title">🍎 Nutty Pudding</div>
         <ul>
-          <li><a target="_blank" href="https://amzn.to/3rv4ftM">Macadamia Milk</a></li>
-          <li><a target="_blank" href="https://amzn.to/43BQQOb">Macadamia Nuts</a></li>
-          <li><a target="_blank" href="https://amzn.to/44KI15w">Walnuts</a></li>
-          <li><a target="_blank" href="https://amzn.to/44QIgMm">Organic Milled Flaxseed</a></li>
-          <li><a target="_blank" href="https://amzn.to/3pO825e">Brazil Nuts</a></li>
-          <li><a target="_blank" href="https://amzn.to/3OmpF5j">Non-dutched/non-alkalized Organic Cacao Powder</a></li>
-          <li>
-            <a
-              target="_blank"
-              href="https://au.iherb.com/pr/now-foods-sunflower-liquid-lecithin-16-fl-oz-473-ml/56886?gclid=Cj0KCQjwn_OlBhDhARIsAG2y6zOSs2MPXaUxqSjAuwPwZjhON7ITk5TUw5wnOf74rt0WvQNtPX1ZY2IaAkAIEALw_wcB&gclsrc=aw.ds"
-              >Organic Sunflower Lecithin Powder</a
-            >
-          </li>
-          <li><a target="_blank" href="https://amzn.to/470WZGC">Ceylon Cinnamon</a></li>
-          <li><a target="_blank" href="https://amzn.to/3Q8WpQS">Organic Pomegranate Juice - Not from concentrate</a></li>
+          <li><a target="_blank" href="https://amzn.to/3rv4ftM">Macadamia Milk 50-100 mL</a></li>
+          <li><a target="_blank" href="https://amzn.to/43BQQOb">Ground Macadamia Nuts 3 Tbsp (20% off + free m-nut oil)</a></li>
+          <li><a target="_blank" href="https://amzn.to/44KI15w">Ground Walnuts 2 tsp</a></li>
+          <li><a target="_blank" href="https://amzn.to/44QIgMm">Ground Flaxseed (seed that is ground into flour) 1 tsp</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pO825e">Brazil Nut 1/4</a></li>
+          <li><a target="_blank" href="https://amzn.to/3OmpF5j">Non-dutched/non-alkalized Organic Cacao Powder 1 Tbsp</a></li>
+          <li><a target="_blank" href="https://amzn.to/3KaCTQ5">Organic Sunflower Lecithin Powder 1 tsp</a></li>
+          <li><a target="_blank" href="https://amzn.to/470WZGC">Ceylon Cinnamon 1/2 tsp</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Q8WpQS">Organic Pomegranate Juice - Not from concentrate 2 oz freshly squeezed</a></li>
+          <li><span>1 cup Blueberries/Raspberries/Strawberries (your choice)</span></li>
+          <li><span>3 Cherries</span></li>
         </ul>
       </div>
       <div class="flex-column">
         <div class="column-title">💊 Upon Waking</div>
         <ul>
-          <li><a target="_blank" href="">Acarbose 200mg (Rx)</a></li>
+          <li><span>Acarbose 200mg (Rx)</span></li>
           <li><a target="_blank" href="https://amzn.to/3O0ECc6">Ashwagandha 600mg</a></li>
           <li><a target="_blank" href="https://amzn.to/43EYWFA">B Complex .25 pill M/Th</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y30YhE">BroccoMax 17.5mg</a></li>
@@ -211,7 +207,7 @@
           <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols 500mg</a></li>
           <li><a target="_blank" href="https://amzn.to/3ryOsKu">CoQ10 100mg</a></li>
           <li><a target="_blank" href="https://amzn.to/3rIStMI">D-3 2,000 IU</a></li>
-          <li><a target="_blank" href="">DHEA 25mg</a></li>
+          <li><span>DHEA 25mg</span></li>
           <li><a target="_blank" href="https://amzn.to/3Q7XUPc">E 67mg</a></li>
           <li><a target="_blank" href="https://amzn.to/46Zk4JD">EPA 500mg with vitamin E 5mg</a></li>
           <li><a target="_blank" href="https://amzn.to/46VjP2h">Garlic 2.4g equivalent</a></li>
@@ -225,7 +221,7 @@
           <li><a target="_blank" href="https://amzn.to/470BbdU">Lithium, as lithium orotate, 1mg</a></li>
           <li><a target="_blank" href="https://amzn.to/3Kch6rv">Lycopene 10mg</a></li>
           <li><a target="_blank" href="https://amzn.to/3pT2CpD">Lysine 1g</a></li>
-          <li><a target="_blank" href="">Metformin ER 1,500 (Rx)</a></li>
+          <li><span>Metformin ER 1,500 (Rx)</span></li>
           <li><a target="_blank" href="https://amzn.to/44Wd4LB">Nicotinamide Riboside 375mg (6 x wk)</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y4nI0B">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
           <li><a target="_blank" href="https://amzn.to/3Dt7Nzq">Proferrin 10mg</a></li>
@@ -238,7 +234,7 @@
       <div class="flex-column">
         <div class="column-title">💊 w/Dinner at 11am</div>
         <ul>
-          <li><a target="_blank" href="">Acarbose 200mg (Rx)</a></li>
+          <li><span>Acarbose 200mg (Rx)</span></li>
           <li><a target="_blank" href="https://amzn.to/3Y30YhE">BroccoMax 17.5mg</a></li>
           <li><a target="_blank" href="https://amzn.to/44AKXC3">Ca-AKG 1 gram</a></li>
           <li><a target="_blank" href="https://amzn.to/3O51t62">Cocoa Flavanols 500mg (has caffeine)</a></li>
@@ -251,7 +247,7 @@
           <li><a target="_blank" href="https://amzn.to/3Y36L6O">Hyaluronic Acid 300mg</a></li>
           <li><a target="_blank" href="https://amzn.to/3pT2CpD">Lysine 1g</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y1Z3db">L-Tyrosine, 500mg</a></li>
-          <li><a target="_blank" href="">Metformin ER 500 mg (Rx)</a></li>
+          <li><span>Metformin ER 500 mg (Rx)</span></li>
           <li><a target="_blank" href="https://amzn.to/3Y4nI0B">N-Acetyl-L-Cysteine (NAC) 1,800 mg</a></li>
           <li><a target="_blank" href="https://amzn.to/44Wd4LB">Nicotinamide Riboside 375mg (6x wk)</a></li>
           <li><a target="_blank" href="https://amzn.to/3Q4zd6p">Taurine 1g</a></li>
@@ -263,15 +259,15 @@
         <ul>
           <li><a target="_blank" href="https://amzn.to/46YuJ7p">Extra Virgin Olive Oil, 30mL daily</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y3pkry">Pea Protein, 29 grams daily</a></li>
-          <li><a target="_blank" href="">Dark Chocolate, 15 grams</a></li>
-          <li><a target="_blank" href="">Rapamycin 13mg, bi-weekly (Rx)</a></li>
-          <li><a target="_blank" href="">HGH .6mg, 5x wk (discontinued 5/31 after 100 days due to side effects)</a></li>
-          <li><a target="_blank" href="">17aE2, 4g wk transdermal</a></li>
-          <li><a target="_blank" href="">Testosterone 2mg patch 6x weekly</a></li>
-          <li><a target="_blank" href="">NDGA 50mg 1x daily</a></li>
-          <li><a target="_blank" href="">B12 methylcobalamin 1x/wk</a></li>
-          <li><a target="_blank" href="">Aspirin 81mg 3x wk</a></li>
-          <li><a target="_blank" href="">112mcg Levothyroxine, 60mg Armour Thyroid (diagnosed with hypothyroidism at age 21)</a></li>
+          <li><span>Dark Chocolate, 15 grams</span></li>
+          <li><span>Rapamycin 13mg, bi-weekly (Rx)</span></li>
+          <li><span>HGH .6mg, 5x wk (discontinued 5/31 after 100 days due to side effects)</span></li>
+          <li><span>17aE2, 4g wk transdermal</span></li>
+          <li><span>Testosterone 2mg patch 6x weekly</span></li>
+          <li><span>NDGA 50mg 1x daily</span></li>
+          <li><span>B12 methylcobalamin 1x/wk</span></li>
+          <li><a target="_blank" href="https://amzn.to/3QaND4X">Aspirin 81mg 3x wk(cut pill into 1/4th's if purchased at link)</a></li>
+          <li><span>112mcg Levothyroxine, 60mg Armour Thyroid (diagnosed with hypothyroidism at age 21)</span></li>
         </ul>
       </div>
       <div class="flex-column">
