--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="flex-column">
         <div class="column-title">🍎 Green Giant</div>
         <ul>
-          <li>20 oz of Water</li>
+          <li><span>20 oz of Water</span></li>
           <li><a target="_blank" href="https://amzn.to/3K6yzkP">Chlorella Powder (Spermidine) 2 Tbsp yielding 13.5mg spermidine</a></li>
           <li><a target="_blank" href="https://amzn.to/46VHAal">Amino Acid Complex 7.6 g</a></li>
           <li><a target="_blank" href="https://amzn.to/3Dl9oHN">Creatine 2.5 g</a></li>
