--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Blueprint Sydney</title>
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <title>blueprint.sydney</title>
     <style>
       body {
         background-color: #000000;
