favicon, link reshuffle

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="icon" href="favicon.png" type="image/x-icon" />
     <title>blueprint.sydney</title>
     <style>
       body {
@@ -272,6 +272,26 @@
         </ul>
       </div>
       <div class="flex-column">
+        <div class="column-title">☀️ Morning Routine</div>
+        <ul>
+          <li><a target="_blank" href="https://amzn.to/3Q2h09A">CeraVe Facial Moisturizing AM</a></li>
+        </ul>
+      </div>
+      <div class="flex-column">
+        <div class="column-title">🌙 Night Routine</div>
+        <ul>
+          <li><a target="_blank" href="http://refer.eight.sl/daneshea">8sleep Pod Cover(mattress not available in 🇦🇺)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3NTSNzy">Blue Light Blocking Glasses</a></li>
+          <li><a target="_blank" href="https://amzn.to/3q0pH9K">Sinometry(for measuring lung capacity)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3pZgIFU">Sensate 2</a></li>
+          <li><a target="_blank" href="https://amzn.to/3O6qYUC">CeraVe Facial Cleanser</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y1Tzzc">CeraVe Facial Moiturizing PM</a></li>
+          <li><a target="_blank" href="https://amzn.to/3O56I5T">Water Pik</a></li>
+          <li><a target="_blank" href="https://nurosym.com/">Nurosym</a></li>
+          <li><a target="_blank" href="https://pulsetto.tech/">Pulsetto</a></li>
+        </ul>
+      </div>
+      <div class="flex-column">
         <div class="column-title">➡️ Other</div>
         <ul>
           <li><a target="_blank" href="https://www.measureup.com.au/dexa/">DEXA scan</a></li>
@@ -281,26 +301,7 @@
           <li><a target="_blank" href="https://imedical.com.au/">Blood panel</a></li>
           <li><a target="_blank" href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Blood glucose monitor</a></li>
           <li><a target="_blank" href="https://amzn.to/3O1S6Ev">Mortar &amp; Pestle</a></li>
-          <li><a target="_blank" href="https://amzn.to/3NTSNzy">Blue Light Blocking Glasses</a></li>
           <li><a target="_blank" href="https://amzn.to/44YfARt">Measuring Spoons</a></li>
-        </ul>
-      </div>
-      <div class="flex-column">
-        <div class="column-title">🌙 Night Time Routine</div>
-        <ul>
-          <li><a target="_blank" href="https://nurosym.com/">Nurosym</a></li>
-          <li><a target="_blank" href="https://pulsetto.tech/">Pulsetto</a></li>
-          <li><a target="_blank" href="https://amzn.to/3q0pH9K">Sinometry(for measuring lung capacity)</a></li>
-          <li><a target="_blank" href="https://amzn.to/3pZgIFU">Sensate 2</a></li>
-          <li><a target="_blank" href="https://amzn.to/3O6qYUC">CeraVe Facial Cleanser</a></li>
-          <li><a target="_blank" href="https://amzn.to/3Y1Tzzc">CeraVe Facial Moiturizing PM</a></li>
-          <li><a target="_blank" href="https://amzn.to/3Q2h09A">CeraVe Facial Moisturizing AM</a></li>
-          <li><a target="_blank" href="https://amzn.to/3O56I5T">Water Pik</a></li>
-        </ul>
-      </div>
-      <div class="flex-column">
-        <div class="column-title">🤓 Smarter Items</div>
-        <ul>
           <li><a target="_blank" href="https://amzn.to/3Y3CxRa">Withings Scale</a></li>
           <li><a target="_blank" href="https://amzn.to/3O3hKZs">Hand Grip Set</a></li>
           <li><a target="_blank" href="https://amzn.to/3Q6UPim">Dressing Containers</a></li>
@@ -312,6 +313,7 @@
         <ul>
           <li><a target="_blank" href="https://youtu.be/Z7veiyN4LqU">Top 1% Sleep Ranking - My Evening Routine</a></li>
           <li><a target="_blank" href="https://youtu.be/j_AtQ6N4jQc">The Anti-Aging Protocol To REVERSE AGING & Live Over 120+ YEARS OLD</a></li>
+          <li><a target="_blank" href="https://twitter.com/bryan_johnson?s=20">Bryan Johnson's Twitter</a></li>
         </ul>
       </div>
     </div>
