--- a/index.html
+++ b/index.html
@@ -275,6 +275,11 @@
         <div class="column-title">☀️ Morning Routine</div>
         <ul>
           <li><a target="_blank" href="https://amzn.to/3Q2h09A">CeraVe Facial Moisturizing AM</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y75yLP">Tea Tree Oil Mouthwash</a></li>
+          <li><a target="_blank" href="https://amzn.to/43IByXR">Tongue Scraper</a></li>
+          <li><a target="_blank" href="https://amzn.to/3O56I5T">Water Pik</a></li>
+          <li><a target="_blank" href="https://amzn.to/3q7PWLw">CoQ10 gel</a></li>
+
         </ul>
       </div>
       <div class="flex-column">
