--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
           <li><a target="_blank" href="https://amzn.to/43IByXR">Tongue Scraper</a></li>
           <li><a target="_blank" href="https://amzn.to/3O56I5T">Water Pik</a></li>
           <li><a target="_blank" href="https://amzn.to/3q7PWLw">CoQ10 gel</a></li>
-
+          <li><a target="_blank" href="https://amzn.to/3DylCg0">UVA+B mineral sunscreen</a></li>
         </ul>
       </div>
       <div class="flex-column">
@@ -299,18 +299,19 @@
       <div class="flex-column">
         <div class="column-title">➡️ Other</div>
         <ul>
-          <li><a target="_blank" href="https://www.measureup.com.au/dexa/">DEXA scan</a></li>
-          <li><a target="_blank" href="https://www.sydneyfloatcentre.com.au/">Sydney Float Centre</a></li>
-          <li><a target="_blank" href="https://koarecovery.com.au/">Cryo, Float, Infrared sauna</a></li>
-          <li><a target="_blank" href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>
-          <li><a target="_blank" href="https://imedical.com.au/">Blood panel</a></li>
-          <li><a target="_blank" href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Blood glucose monitor</a></li>
           <li><a target="_blank" href="https://amzn.to/3O1S6Ev">Mortar &amp; Pestle</a></li>
           <li><a target="_blank" href="https://amzn.to/44YfARt">Measuring Spoons</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y3CxRa">Withings Scale</a></li>
           <li><a target="_blank" href="https://amzn.to/3O3hKZs">Hand Grip Set</a></li>
           <li><a target="_blank" href="https://amzn.to/3Q6UPim">Dressing Containers</a></li>
           <li><a target="_blank" href="https://amzn.to/3Q6V5hk">Bedroom Blackout Film</a></li>
+          <li><a target="_blank" href="https://www.measureup.com.au/dexa/">DEXA scan</a></li>
+          <li><a target="_blank" href="https://www.sydneyfloatcentre.com.au/">Sydney Float Centre</a></li>
+          <li><a target="_blank" href="https://koarecovery.com.au/">Cryo, Float, Infrared sauna</a></li>
+          <li><a target="_blank" href="https://www.cryo.com.au/cryotherapy/">Cryo</a></li>
+          <li><a target="_blank" href="https://imedical.com.au/">Blood panel</a></li>
+          <li><a target="_blank" href="https://www.freestylelibre.com.au/freestyle-libre-2-sensor.html">Freestyle Libre Glucose Monitor(15AUD trial)</a></li>
+          <li><a target="_blank" href="https://amsldiabetesshop.com.au/products/dexcom-g6-trial-offer">Dexcom G6 Glucose Monitor(32AUD trial)</a></li>
         </ul>
       </div>
       <div class="column-span sources">
