--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="static/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="public/favicon.ico" type="image/x-icon" />
     <title>blueprint.sydney</title>
     <style>
       body {
