added down under link

--- a/public/index.html
+++ b/public/index.html
@@ -147,8 +147,8 @@
       <div class="typing column-span"><span /></div>
       <div class="column-span intro">
         Are you inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> but live in Sydney, Australia?
-        <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available in Australia.
-        Suggestions/additions/comments very welcome.<br /><br />
+        <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available <a href="https://www.youtube.com/watch?v=XfR9iY5y94s" target="_blank">down under</a>.
+        Suggestions/additions/comments welcome.<br /><br />
 
         <span class="disclaimer">Disclaimer: Some of these are referral links.</span>
       </div>
