added more links

--- a/public/index.html
+++ b/public/index.html
@@ -280,6 +280,7 @@
           <li><a target="_blank" href="https://amzn.to/3O56I5T">Water Pik</a></li>
           <li><a target="_blank" href="https://amzn.to/3q7PWLw">CoQ10 gel</a></li>
           <li><a target="_blank" href="https://amzn.to/3DylCg0">UVA+B mineral sunscreen</a></li>
+          <li><a target="_blank" href="https://amzn.to/43JeJTN">Light Therapy Lamp</a></li>
         </ul>
       </div>
       <div class="flex-column">
@@ -292,6 +293,7 @@
           <li><a target="_blank" href="https://amzn.to/3O6qYUC">CeraVe Facial Cleanser</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y1Tzzc">CeraVe Facial Moiturizing PM</a></li>
           <li><a target="_blank" href="https://amzn.to/3O56I5T">Water Pik</a></li>
+          <li><a target="_blank" href="https://amzn.to/3QfaBYv">ZAMAT Contour Memory Foam Pillow</a></li>
           <li><a target="_blank" href="https://nurosym.com/">Nurosym</a></li>
           <li><a target="_blank" href="https://pulsetto.tech/">Pulsetto</a></li>
         </ul>
