Added a source and README

--- a/public/index.html
+++ b/public/index.html
@@ -148,7 +148,7 @@
       <div class="column-span intro">
         Are you inspired by Bryan Johnson's <a href="https://blueprint.bryanjohnson.co/" target="_blank">Blueprint</a> but live in Sydney, Australia?
         <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available <a href="https://www.youtube.com/watch?v=XfR9iY5y94s" target="_blank">down under</a>.
-        Suggestions/additions/comments welcome.<br /><br />
+        Suggestions/additions/comments <a href="https://github.com/danekshea/blueprint-aus" target="_blank">welcome</a>.<br /><br />
 
         <span class="disclaimer">Disclaimer: Some of these are referral links.</span>
       </div>
@@ -319,9 +319,10 @@
       <div class="column-span sources">
         <div class="column-title">📃 Sources</div>
         <ul>
+          <li><a target="_blank" href="https://twitter.com/bryan_johnson?s=20">Bryan Johnson's Twitter</a></li>
           <li><a target="_blank" href="https://youtu.be/Z7veiyN4LqU">Top 1% Sleep Ranking - My Evening Routine</a></li>
           <li><a target="_blank" href="https://youtu.be/j_AtQ6N4jQc">The Anti-Aging Protocol To REVERSE AGING & Live Over 120+ YEARS OLD</a></li>
-          <li><a target="_blank" href="https://twitter.com/bryan_johnson?s=20">Bryan Johnson's Twitter</a></li>
+          <li><a target="_blank" href="https://youtu.be/LB9ovOjrw6U">My Extreme Anti-Aging Diet (ft. Steve Aoki)</a></li>
         </ul>
       </div>
     </div>
