Added pea protein into Nutty pudding

--- a/public/index.html
+++ b/public/index.html
@@ -192,6 +192,7 @@
           <li><a target="_blank" href="https://amzn.to/3KaCTQ5">Organic Sunflower Lecithin Powder 1 tsp</a></li>
           <li><a target="_blank" href="https://amzn.to/470WZGC">Ceylon Cinnamon 1/2 tsp</a></li>
           <li><a target="_blank" href="https://amzn.to/3Q8WpQS">Organic Pomegranate Juice - Not from concentrate 2 oz freshly squeezed</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y3pkry">Pea Protein, 30-60 grams</a></li>
           <li><span>1 cup Blueberries/Raspberries/Strawberries (your choice)</span></li>
           <li><span>3 Cherries</span></li>
         </ul>
