removed weight from pea protein under other

--- a/public/index.html
+++ b/public/index.html
@@ -260,7 +260,7 @@
         <div class="column-title">💊 Other</div>
         <ul>
           <li><a target="_blank" href="https://amzn.to/46YuJ7p">Extra Virgin Olive Oil, 30mL daily</a></li>
-          <li><a target="_blank" href="https://amzn.to/3Y3pkry">Pea Protein, 29 grams daily</a></li>
+          <li><a target="_blank" href="https://amzn.to/3Y3pkry">Pea Protein</a></li>
           <li><span>Dark Chocolate, 15 grams</span></li>
           <li><span>Rapamycin 13mg, bi-weekly (Rx)</span></li>
           <li><span>HGH .6mg, 5x wk (discontinued 5/31 after 100 days due to side effects)</span></li>
