Ref links notification removed as amzn kicked me off

--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
         <a href="https://twitter.com/danekshea" target="_blank">Me</a> too! Here are the same/similar products but available <a href="https://www.youtube.com/watch?v=XfR9iY5y94s" target="_blank">down under</a>.
         Suggestions/additions/comments <a href="https://github.com/danekshea/blueprint-aus" target="_blank">welcome</a>.<br /><br />
 
-        <span class="disclaimer">Disclaimer: Some of these are referral links.</span>
+        <!-- <span class="disclaimer">Disclaimer: Some of these are referral links.</span> -->
       </div>
       <div class="flex-column">
         <div class="column-title">🍎 Green Giant</div>
