updated meal quantities and ingredients

--- a/public/index.html
+++ b/public/index.html
@@ -167,7 +167,7 @@
       <div class="flex-column">
         <div class="column-title">🍎 Super Veggie</div>
         <ul>
-          <li><a target="_blank" href="https://amzn.to/3rB9ybb">Black lentils, 300 grams (weighed cooked)</a></li>
+          <li><a target="_blank" href="https://amzn.to/3rB9ybb">Black lentils, 150 grams (weighed cooked)</a></li>
           <li><span>Broccoli (head+stalk), 250 grams</span></li>
           <li><span>Cauliflower, 150 grams</span></li>
           <li><span>Shiitake or Maitake Mushrooms, 50 grams</span></li>
@@ -186,6 +186,7 @@
           <li><a target="_blank" href="https://amzn.to/3rv4ftM">Macadamia Milk 50-100 mL</a></li>
           <li><a target="_blank" href="https://amzn.to/43BQQOb">Ground Macadamia Nuts 3 Tbsp (20% off + free m-nut oil)</a></li>
           <li><a target="_blank" href="https://amzn.to/44KI15w">Ground Walnuts 2 tsp</a></li>
+          <li><a target="_blank" href="https://amzn.asia/d/5ZTHQpn">2 Tbsp of chia seeds</a></li>
           <li><a target="_blank" href="https://amzn.to/44QIgMm">Ground Flaxseed (seed that is ground into flour) 1 tsp</a></li>
           <li><a target="_blank" href="https://amzn.to/3pO825e">Brazil Nut 1/4</a></li>
           <li><a target="_blank" href="https://amzn.to/3OmpF5j">Non-dutched/non-alkalized Organic Cacao Powder 1 Tbsp</a></li>
@@ -193,7 +194,7 @@
           <li><a target="_blank" href="https://amzn.to/470WZGC">Ceylon Cinnamon 1/2 tsp</a></li>
           <li><a target="_blank" href="https://amzn.to/3Q8WpQS">Organic Pomegranate Juice - Not from concentrate 2 oz freshly squeezed</a></li>
           <li><a target="_blank" href="https://amzn.to/3Y3pkry">Pea Protein, 30-60 grams</a></li>
-          <li><span>1 cup Blueberries/Raspberries/Strawberries (your choice)</span></li>
+          <li><span>1/2 cup Blueberries/Raspberries/Strawberries (your choice)</span></li>
           <li><span>3 Cherries</span></li>
         </ul>
       </div>
