--- a/public/index.html
+++ b/public/index.html
@@ -153,7 +153,7 @@
         <!-- <span class="disclaimer">Disclaimer: Some of these are referral links.</span> -->
       </div>
       <div class="flex-column">
-        <div class="column-title">🍎 Green Giant</div>
+        <div class="column-title">🍎 Green Giant(<a href="https://protocol.bryanjohnson.com/Step-1-Step-2-Step-3" target="_blank">Deprecrated</a>)</div>
         <ul>
           <li><span>20 oz of Water</span></li>
           <li><a target="_blank" href="https://amzn.to/3K6yzkP">Chlorella Powder (Spermidine) 2 Tbsp yielding 13.5mg spermidine</a></li>
